	- Fix freezing when vessel removal throws an exception.
- AI:
	- Fix incorrect inputField for off-target dynamic roll damping.
	- Fix RippleIndex Errors from weapons overheating/reloading.
	- Fix AI ignoring max missiles per target setting for GPS missiles
	- Spaceborne pilotAIs will now dodge via RCS translation.
- Detectors:
	- Fix IRST preventing Radar GUI close.
	- Fix NRE in targeting camera when the camera parent transform is null.
	- Re-work IR occlusion to look at engine and engine plume heat for non-prop engines, weight parts by mass and proximity to heat source for occlusion, and incorporate occlusion from the engine outside of a 50 deg angle of the engine exhaust.
- ECM
	- Radar missile position distortion due to chaff now relies on ECM jammer strength (jammerStrength) instead of the overall RCS with jamming effects. Low RCS craft will have an easier time evading radar missiles.
	- Lockbreak from jammers now affects RCS with RCS reduction instead of base RCS. Craft can now mix RCS reduction parts and jammers to break locks without worrying about them conflicting.
	- Incorporate stand-off jamming effects. Friendly craft with jammers now result in your craft being harder to detect and lock. Strength of this effect is determined by the lockBreakerStrength of the friendly jammers, relative distance of friendly jammers (friendly jammers closer to enemy will have a stronger effect), and if the jammers are close in field of view for the enemy (friendly jammers in same field of view will have a stronger effect). Debug readout is available by enabling the Detectors debug option.
	-  AI no longer will turn off jammers automatically if they were manually enabled prior to being turned on by the AI
- Weapons:
	- Fix FXLookAtConstraint modules on various turrets.
	- Fix incorrect charge sound path for lasers.
	- Make the ABL use proper looping audio and add a cool-down sound.
	- Fix the ABL laser beam continuing to show while overheated when used manually.